Links und Termine

--- a/index.html
+++ b/index.html
@@ -88,30 +88,30 @@
 					</header>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-small">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.jpg" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
 							<p>An jedem dritten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Samstag, 19. Oktober 2019</strong></p>
+							<p>Nächster Termin: <strong>Samstag, 16. November 2019</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button">Mehr erfahren</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button">Anmelden</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt="" /></a></span>
 							<h3>Letschin</h3>
 							<p>An jedem vierten Freitag im Monat im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>, 14 - 17 Uhr.</p>
 							<p>Nächster Termin: <strong>Freitag, 25. Oktober 2019</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button">Mehr erfahren</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button">Anmelden</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.jpg" alt="" /></a></span>
 							<h3>Beeskow</h3>
 							<p>An jedem ersten Samstag im Monat in der <a href="https://burg-beeskow.de">Burg Beeskow</a>, 14 - 17 Uhr.</p>
 							<p>Nächster Termin: <strong>Samstag, 2. November 2019</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button">Mehr erfahren</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button">Anmelden</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
