--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
 					<br>
 					<div class="row gtr-150">
 						<div class="col-2 col-12-xsmall">
-						<span class="image fit"><img src="images/n21.png" ></span>
+						<span class="image fit"><a href="https://neuland21.de"><img src="images/n21.png" ></a></span>
 						</div>
 						<div class="col-8 col-12-xsmall">
 						<br>
 						<p>Das CoderDojo Oder-Spree ist ein Projekt von <a href="https://neuland21.de">Neuland 21 e.V.</a> und <a href="https://coderdojo-deutschland.de">CoderDojo Deutschland e.V.</a> und wird gefördert von <a href="https://www.digitalengagiert.de/">digital.engagiert</a>.</p> 
 						</div>
 						<div class="col-2 col-12-xsmall">
-						<span class="image fit"><img src="images/de.png" ></span>
+						<span class="image fit"><a href="https://www.digitalengagiert.de/"><img src="images/de.png" ></a></span>
 						</div>
 					</div>
 				</div>
