Trainingstag und Buttons

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<h3>Deine Stadt?</h3>
 							<p>Du hast Lust, auch bei Dir ein CoderDojo zu starten? Schreib uns, und wir überlegen gemeinsam, wie wir das hinkriegen können.</p>
 							<ul class="actions special">
-								<li><a href="mailto:oderdojo@gmail.com" class="button">Schreib uns</a></li>
+								<li><a href="mailto:oderdojo@gmail.com" class="button primary">Schreib uns</a></li>
 							</ul>
 						</div>
 					</div>
@@ -181,7 +181,7 @@
 							<h3>Du?</h3>
 							<p>Werde Mentor*in in Deiner Stadt!</p>
 							<ul class="actions special">
-								<li><a href="mailto:oderdojo@gmail.com" class="button">Bin dabei</a></li>
+								<li><a href="mailto:oderdojo@gmail.com" class="button primary">Bin dabei</a></li>
 							</ul>
 						</div>
 					</div>
@@ -252,8 +252,9 @@
 					
 					<div class="col-4 col-12-small">
 						<h3>Werde Mentor*in</h3>
-						<p>Hast Du Lust, direkt vor Ort mitzumachen?</p>
+						<p>Hast Du Lust, direkt vor Ort mitzumachen?<br>Komm zu unserem Trainingstag am <strong>30. November</strong> in Berlin.</p>
 							<ul class="actions special">
+								<li><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Trainingstag</a></li>
 								<li><a href="mailto:oderdojo@gmail.com" class="button">Schreib uns</a></li>
 							</ul>
 					</div>
