--- a/material.html
+++ b/material.html
@@ -69,7 +69,7 @@ Kopien aus dem <a href="https://www.thalia.de/shop/home/artikeldetails/ID6448396
 
 <p><a href="https://calliope.cc/los-geht-s/erste-schritte">Calliope Mini</a><br />
 <a href="https://www.progbob.org/">BOB3</a> <br />
-<a href="https://projects.raspberrypi.org/en/projects/raspberry-pi-getting-started">Raspberry Pi</a> (auf Englisch)</p>
+<a href="https://projects.raspberrypi.org/de-DE/projects/raspberry-pi-setting-up">Raspberry Pi</a></p>
 
 <h2 id="fortgeschrittene">Fortgeschrittene</h2>
 
