--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<span class="image fit"><img src="images/you.png" alt="" /></span>
 						</div>
 						<div class="col-8 col-12-small">
-							<p>Genaueres dazu, wie CoderDojos funktionieren, könnt ihr auf <strong><a href="">der zentralen Seite der Bewegung</a></strong> lesen. </p>
+							<p>Genaueres dazu, wie CoderDojos funktionieren, könnt ihr auf <strong><a href="https://coderdojo.com/de-DE">der zentralen Seite der Bewegung</a></strong> lesen. </p>
 							<p>Mittlerweile gibt es schon drei Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, eins in <strong>Letschin</strong> und seit kurzem auch noch eins in <strong>Beeskow</strong>! Wir treffen uns normalerweise einmal im Monat.</p>
 						</div>
 					</div>
