--- a/index.html
+++ b/index.html
@@ -269,9 +269,10 @@
 					</div>
 					<div class="col-6 col-12-small">
 						<h3>Spende für unser Dojo</h3>
-						<p>Wir brauchen vor allem auch Hardware. Kannst Du uns welche schenken? Oder ein bisschen Geld für Computermäuse spenden? Hier findest Du unsere Gesuche auf Betterplace und <a href="https://vostel.de/de/volunteering/donation_requests/48_CoderDojo_BERLIN-Computermaeuse">Vostel</a>. </p>
+						<p>Wir brauchen vor allem auch Hardware. Kannst Du uns welche schenken? Oder ein bisschen Geld für Computermäuse spenden? Hier findest Du unsere Gesuche: </p>
 							<ul class="actions special">
-								<li><a href="mailto:oderdojo@gmail.com" class="button">Schreib uns</a></li>
+								<li><a href="https://www.betterplace.org/de/projects/73638" class="button">Betterplace</a></li>
+								<li><a href="https://vostel.de/de/volunteering/donation_requests/48_CoderDojo_BERLIN-Computermaeuse" class="button">Vostel</a></li>
 							</ul>
 					</div>
 					</div>
