--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 					<div class="row gtr-150">
 					<div class="col-6 col-12-small">
 						<h3>Nicht vor Ort?</h3>
-						<p>Kein Problem! Du kannst uns auch bei Social Media, der Webseite oder mit Materialrecherche unterstützen. Hier findest Du unsere Gesuche bei Vostel, Youvo und <a href="https://n3xtcoder.org/ventures/oderdojo">N3XTCODER</a>.</p>
+						<p>Kein Problem! Du kannst uns auch bei Social Media, der Webseite oder mit Materialrecherche unterstützen. Hier findest Du unsere Gesuche bei Vostel, <a href="https://www.betterplace.org/de/organisations/38854-neuland-21-e-v/job_descriptions">Betterplace</a> und <a href="https://n3xtcoder.org/ventures/oderdojo">N3XTCODER</a>.</p>
 							<ul class="actions special">
 								<li><a href="mailto:oderdojo@gmail.com" class="button">Schreib uns</a></li>
 							</ul>
