--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 								<li><a href="https://www.betterplace.org/de/projects/73638" class="button">Betterplace</a></li>
 								<li><a href="https://vostel.de/de/volunteering/donation_requests/48_CoderDojo_BERLIN-Computermaeuse" class="button">Vostel</a></li>
 							</ul>
+							<ul class="actions special"><li><iframe frameborder="0" marginheight="0" marginwidth="0" src="https://www.betterplace-widget.org/projects/73638?l=de" width="100%" height="320" style="border: 0; padding:0; margin:0;">Informieren und spenden: <a href='https://www.betterplace.org/de/projects/73638-unterstutze-unsere-programmierwerkstatten-fur-kids-in-brandenburg' target='_blank'>„Unterstütze unsere Programmierwerkstätten für Kids in Brandenburg“</a> auf betterplace.org öffnen.</iframe></li></ul>
 					</div>
 					</div>
 					
