--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
 							<p>Mittlerweile gibt es schon drei Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, eins in <strong>Letschin</strong> und seit kurzem auch noch eins in <strong>Beeskow</strong>! Wir treffen uns normalerweise einmal im Monat.</p>
 						</div>
 					</div>
+					<header class="major" style="text-align:center"><h2>Aktuelles</h2></header>
+					<div class="row gtr-150">
+						<div class="col-7 col-12-small">
+							<p> Am <strong>30. November</strong> veranstalten wir in Berlin einen <strong>Trainingstag</strong> für alle, die sich dafür interessieren Mentor*innen zu werden, oder selbst ein Dojo zu gründen. Kommt einfach dazu!</p>
+					   		<p style="text-align:center" ><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Kostenlos anmelden</a></p>
+						</div>
+						<div class="col-5 col-12-small imp-medium">
+							<span class="image fit"><img src="images/cropped-characters.jpg" alt="" /></span>
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -83,6 +93,7 @@
 		<!-- Three -->
 			<section id="three" class="main style1 special">
 				<div class="container">
+					
 					<header class="major">
 						<h2>Unsere Dojos</h2>
 					</header>
