--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<header class="major" style="text-align:center"><h2>Aktuelles</h2></header>
 					<div class="row gtr-150">
 						<div class="col-7 col-12-small">
-							<p> Am <strong>30. November</strong> veranstalten wir in Berlin einen <strong>Trainingstag</strong> für alle, die sich dafür interessieren Mentor*innen zu werden, oder selbst ein Dojo zu gründen. Kommt einfach dazu!</p>
+							<p> Am <strong>30. November</strong> veranstalten wir in Berlin einen <strong><a href="https://www.eventbrite.de/e/77272372747"> Trainingstag</a></strong> für alle, die sich dafür interessieren Mentor*innen zu werden, oder selbst ein Dojo zu gründen. Kommt einfach dazu!</p>
 					   		<p style="text-align:center" ><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Kostenlos anmelden</a></p>
 						</div>
 						<div class="col-5 col-12-small imp-medium">
