--- a/material.html
+++ b/material.html
@@ -55,6 +55,7 @@
 
 <p><a href="https://programmieren.wdrmaus.de/lernspiel/00">Programmieren lernen mit der Maus</a><br />
 <a href="http://coderdojo-linz.github.io/trainingsanleitungen/scratch/hour-of-code.html"><em>Hour of Code</em> Programmierspiele</a> mit Angry Birds, Anna und Elsa, Star Wars oder Minecraft<br />
+<a href="https://studio.code.org/s/dance/stage/1/puzzle/1"><em>Hour of Code</em> Tanzparty</a><br>
 Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar nicht lesen können.</p>
 
 <h2 id="anfängerinnen">Anfänger*innen</h2>
@@ -68,6 +69,7 @@ Kopien aus dem <a href="https://www.thalia.de/shop/home/artikeldetails/ID6448396
 <h3 id="hardware">Hardware</h3>
 
 <p><a href="https://calliope.cc/los-geht-s/erste-schritte">Calliope Mini</a><br />
+	<a href="https://makeymakey.com/blogs/how-to-instructions/apps-for-plug-and-play">Makey Makey</a><br>
 <a href="https://www.progbob.org/">BOB3</a> <br />
 <a href="https://projects.raspberrypi.org/de-DE/projects/raspberry-pi-setting-up">Raspberry Pi</a></p>
 
