--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
 						<div class="col-7 col-12-small">
 							<p> Am <strong>30. November</strong> veranstalten wir in Berlin einen <strong><a href="https://www.eventbrite.de/e/77272372747"> Trainingstag</a></strong> für alle, die sich dafür interessieren Mentor*innen zu werden, oder selbst ein Dojo zu gründen. Kommt einfach dazu!</p>
 					   		<p style="text-align:center" ><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Kostenlos anmelden</a></p>
+					   		<span class="image fit"><img src="images/cropped-characters.jpg" alt="" /></span>
 						</div>
 						<div class="col-5 col-12-small imp-medium">
-							<span class="image fit"><img src="images/cropped-characters.jpg" alt="" /></span>
+							<ul class="actions special">
+							<li><div style="width:195px; text-align:center;" ><iframe  src="https://www.eventbrite.de/countdown-widget?eid=77272372747" frameborder="0" height="442" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:195px; text-align:center;" >
+							</div></div>
+							</li></ul>
 						</div>
 					</div>
 				</div>
