--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
 					</div>
 					<header class="major" style="text-align:center"><h2>Aktuelles</h2></header>
 					<div class="row gtr-150">
-						<div class="col-7 col-12-small">
+						<div class="col-8 col-12-small"> 
+							<p> Wir suchen ehrenamtliche Mentor*innen in <strong> Beeskow </strong> und im <strong> Oderbruch </strong>, um unsere Standorte dort weiterzuführen. Bitte meldet euch, wenn ihr selber Lust habt mitzumachen oder jemanden kennt! </p> 
+						</div>
+						<div class="col-4 col-12-small imp-medium">
+							<ul class="actions special">
+							<li><a href="mailto:oderdojo@gmail.com" class="button primary">Schreib uns</a></li>
+							</ul>
+						</div>
+						<!--<div class="col-7 col-12-small">
 							<p> Am <strong>30. November</strong> veranstalten wir in Berlin einen <strong><a href="https://www.eventbrite.de/e/77272372747"> Trainingstag</a></strong> für alle, die sich dafür interessieren Mentor*innen zu werden, oder selbst ein Dojo zu gründen. Kommt einfach dazu!</p>
 					   		<p style="text-align:center" ><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Kostenlos anmelden</a></p>
 					   		<span class="image fit"><img src="images/cropped-characters.jpg" alt="" /></span>
@@ -70,8 +78,8 @@
 							<li><div style="width:195px; text-align:center;" ><iframe  src="https://www.eventbrite.de/countdown-widget?eid=77272372747" frameborder="0" height="442" width="195" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:195px; text-align:center;" >
 							</div></div>
 							</li></ul>
-						</div>
-					</div>
+						</div> -->
+					</div> 
 				</div>
 			</section>
 
@@ -105,8 +113,8 @@
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.jpg" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
-							<p>An jedem dritten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Samstag, 16. November 2019</strong></p>
+							<p>An jedem vierten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
+							<p>Nächster Termin: <strong>Samstag, 29. Februar 2020</strong></p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button">Anmelden</a></li>
 							</ul>
@@ -115,18 +123,18 @@
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt="" /></a></span>
 							<h3>Letschin</h3>
 							<p>An jedem vierten Freitag im Monat im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Freitag, 25. Oktober 2019</strong></p>
+							<p>Nächster Termin: <strong>Wir suchen noch ehrenamtliche Mentor*innen im Oderbruch!</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button primary">Mitmachen</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.jpg" alt="" /></a></span>
 							<h3>Beeskow</h3>
 							<p>An jedem ersten Samstag im Monat in der <a href="https://burg-beeskow.de">Burg Beeskow</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Samstag, 2. November 2019</strong></p>
+							<p>Nächster Termin: <strong>Wir suchen noch ehrenamtliche Mentor*innen in Beeskow!</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button primary">Mitmachen</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
