--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.jpg" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
 							<p>An jedem vierten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Samstag, 29. Februar 2020</strong></p>
+							<p>Nächster Termin: <strong>Samstag, 28. März 2020</strong></p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button">Anmelden</a></li>
 							</ul>
@@ -257,7 +257,7 @@
 						</div>
 						<div class="col-8 col-12-xsmall">
 						<br>
-						<p>Das CoderDojo Oder-Spree ist ein Projekt von <a href="https://neuland21.de">Neuland 21 e.V.</a> und <a href="https://coderdojo-deutschland.de">CoderDojo Deutschland e.V.</a> und wird gefördert von <a href="https://www.digitalengagiert.de/">digital.engagiert</a>.</p> 
+						<p>Das CoderDojo Oder-Spree ist ein Projekt von <a href="https://neuland21.de">Neuland 21 e.V.</a> und <a href="https://coderdojo-deutschland.de">CoderDojo Deutschland e.V.</a> und wurde 2019 gefördert von <a href="https://www.digitalengagiert.de/">digital.engagiert</a>.</p> 
 						</div>
 						<div class="col-2 col-12-xsmall">
 						<span class="image fit"><a href="https://www.digitalengagiert.de/"><img src="images/de.png" ></a></span>
