Neue Dojos zu Halloween

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CoderDojo Oder-Spree</title>
+		<title>CoderDojo | Oder-Spree | Fläming</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner"> 
 					<!--<span class="icon solid major fa-cloud"></span> -->
-					<h1>CoderDojo Oder-Spree</h1>
+					<h1>CoderDojo <br> Oder-Spree, Fläming und Havelland</h1>
 					<p>#oderdojo</p><br>
 					<ul class="icons">
 					<li><a href="https://twitter.com/oderdojo" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -55,13 +55,19 @@
 						</div>
 						<div class="col-8 col-12-small">
 							<p>Genaueres dazu, wie CoderDojos funktionieren, könnt ihr auf <strong><a href="https://coderdojo.com/de-DE">der zentralen Seite der Bewegung</a></strong> lesen. </p>
-							<p>Mittlerweile gibt es schon drei Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, eins in <strong>Letschin</strong> und seit kurzem auch noch eins in <strong>Beeskow</strong>! Wir treffen uns normalerweise einmal im Monat.</p>
+							<p>Mittlerweile gibt es schon einige Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, jeweils eins in <strong>Letschin</strong> und in <strong>Beeskow</strong> (die leider gerade noch auf engagierte Mentor*innen warten!) und jetzt auch zusammen mit <a href="https://neuland21.de">Neuland21</a> neue Dojos in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>! Wir treffen uns normalerweise ein- bis zweimal im Monat.</p>
 						</div>
 					</div>
 					<header class="major" style="text-align:center"><h2>Aktuelles</h2></header>
 					<div class="row gtr-150">
+						<div class="col-8 col-12-small">
+							<p>Wir starten drei neue Dojos! Jetzt, diese Woche, noch im Oktober! Rechtzeitig zu Halloween geht es los in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>!</p>
+						</div>
+						<div class="col-4 col-12-small imp-medium">
+							<span class="image fit"><img src="images/halloween.png" alt="" /></span>
+						</div>
 						<div class="col-8 col-12-small"> 
-							<p> Wir suchen ehrenamtliche Mentor*innen in <strong> Beeskow </strong> und im <strong> Oderbruch </strong>, um unsere Standorte dort weiterzuführen. Bitte meldet euch, wenn ihr selber Lust habt mitzumachen oder jemanden kennt! </p> 
+							<p> Außerdem suchen wir weiterhin ehrenamtliche Mentor*innen in <strong> Beeskow </strong> und im <strong> Oderbruch </strong>, um unsere Standorte dort weiterzuführen. Bitte meldet euch, wenn ihr selber Lust habt mitzumachen oder jemanden kennt! </p> 
 						</div>
 						<div class="col-4 col-12-small imp-medium">
 							<ul class="actions special">
@@ -123,7 +129,7 @@
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt="" /></a></span>
 							<h3>Letschin</h3>
 							<p>An jedem vierten Freitag im Monat im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Wir suchen noch ehrenamtliche Mentor*innen im Oderbruch!</strong></p>
+							<p>Nächster Termin: <strong>Wir suchen noch ehrenamtliche Mentor*innen in Letschin!</strong></p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button primary">Mitmachen</a></li>
 							</ul>
