Neue Standorte eingepflegt

--- a/index.html
+++ b/index.html
@@ -116,11 +116,40 @@
 						<h2>Unsere Dojos</h2>
 					</header>
 					<div class="row gtr-150">
+
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.jpg" alt="" /></a></span>
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/trollberg.png" alt="" /></a></span>
+							<h3>Bad Belzig</h3>
+							<p>An jedem zweiten Freitag im <br><a href="https://awo-potsdam.de/standort/trollberg-bad-belzig/">TRollberg</a>, 15 - 17:30 Uhr.</p>
+							<p>Nächster Termin: <strong>Freitag, 30. Oktober 2020</strong></p>
+							<ul class="actions special">
+								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button">Anmelden</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-small">
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/wiesenburg.png" alt="" /></a></span>
+							<h3>Wiesenburg</h3>
+							<p>An jedem zweiten Montag in der <a href="https://goo.gl/maps/5VcZFjH4MYwzZAuz7">Kunsthalle Wiesenburg</a>, 14 - 16 Uhr.</p>
+							<p>Nächster Termin: <strong>Montag, 2. Nov. 2020</strong></p>
+							<ul class="actions special">
+								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button">Anmelden</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-small">
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek"><img src="images/fouque_bib.png" alt="" /></a></span>
+							<h3>Brandenburg an der Havel</h3>
+							<p>An jedem zweiten Dienstag in der <a href="https://bibliothek.stadt-brandenburg.de/">Fouqué-Bibliothek Brandenburg</a>, 15:30 - 18 Uhr.</p>
+							<p>Nächster Termin: <strong>Dienstag, 3. Nov. 2020</strong></p>
+							<ul class="actions special">
+								<li><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek" class="button">Anmelden</a></li>
+							</ul>
+						</div>
+
+						<div class="col-4 col-12-small">
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
 							<p>An jedem vierten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
-							<p>Nächster Termin: <strong>Samstag, 28. März 2020</strong></p>
+							<p>Nächster Termin: <strong>Hoffentlich bald wieder!</strong></p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button">Anmelden</a></li>
 							</ul>
@@ -135,7 +164,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.jpg" alt="" /></a></span>
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.png" alt="" /></a></span>
 							<h3>Beeskow</h3>
 							<p>An jedem ersten Samstag im Monat in der <a href="https://burg-beeskow.de">Burg Beeskow</a>, 14 - 17 Uhr.</p>
 							<p>Nächster Termin: <strong>Wir suchen noch ehrenamtliche Mentor*innen in Beeskow!</strong></p>
@@ -193,7 +222,12 @@
 						<div class="col-3 col-12-xsmall">
 							<span class="image fit"><img src="images/you.png" alt="" /></span>
 							<h3>Conny</h3>
-							<p>Conny organisiert und leitet die Dojos, und kann Dir besonders am Anfang bei allen Fragen helfen.</p>
+							<p>Conny organisiert und leitet die Dojos in Frankfurt, Letschin und Beeskow, und hilft Dir bei allen Fragen.</p>
+						</div>
+						<div class="col-3 col-12-xsmall">
+							<span class="image fit"><img src="images/you.png" alt="" /></span>
+							<h3>Josefine</h3>
+							<p>Josefine organisiert und leitet die Dojos in Bad Belzig, Wiesenburg und Brandenburg, und hilft Dir bei allen Fragen.</p>
 						</div>
 						<div class="col-3 col-12-xsmall">
 							<span class="image fit"><img src="images/boy.png" alt="" /></span>
@@ -206,7 +240,7 @@
 							<p>Unser BOB3 freut sich schon darauf, von Dir für lustige Spiele programmiert zu werden.</p>
 						</div>
 						<div class="col-3 col-12-xsmall">
-							<span class="image fit"><img src="images/you.png" alt="" /></span>
+							<span class="image fit"><img src="images/boy.png" alt="" /></span>
 							<h3>Du?</h3>
 							<p>Werde Mentor*in in Deiner Stadt!</p>
 							<ul class="actions special">
@@ -281,9 +315,9 @@
 					
 					<div class="col-4 col-12-small">
 						<h3>Werde Mentor*in</h3>
-						<p>Hast Du Lust, direkt vor Ort mitzumachen?<br>Komm zu unserem Trainingstag am <strong>30. November</strong> in Berlin.</p>
+						<p>Hast Du Lust, direkt vor Ort mitzumachen? <!-- <br>Komm zu unserem Trainingstag am <strong>30. November</strong> in Berlin.--> </p>
 							<ul class="actions special">
-								<li><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Trainingstag</a></li>
+								<!-- <li><a href="https://www.eventbrite.de/e/77272372747" class="button primary">Trainingstag</a></li> -->
 								<li><a href="mailto:oderdojo@gmail.com" class="button">Schreib uns</a></li>
 							</ul>
 					</div>
