--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>CoderDojo | Oder-Spree | Fläming</title>
+		<title>CoderDojo | Oder-Spree | Fläming | Brandenburg/Havel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,15 +12,14 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner"> 
-					<!--<span class="icon solid major fa-cloud"></span> -->
 					<h1>CoderDojo <br> Oder-Spree, Fläming und Havelland</h1>
 					<p>#oderdojo</p><br>
 					<ul class="icons">
-					<li><a href="https://twitter.com/oderdojo" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://facebook.com/oderdojo" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="https://instagram.com/oderdojo" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/oderdojo" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:oderdojo@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+  					<li><a href="https://twitter.com/oderdojo" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+  					<li><a href="https://facebook.com/oderdojo" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+  					<li><a href="https://instagram.com/oderdojo" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+  					<li><a href="https://github.com/oderdojo" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+  					<li><a href="mailto:oderdojo@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="actions special">
 						<li><a href="#three" class="button scrolly">Termine</a></li>
@@ -54,20 +48,22 @@
 							<span class="image fit"><img src="images/you.png" alt="" /></span>
 						</div>
 						<div class="col-8 col-12-small">
-							<p>Genaueres dazu, wie CoderDojos funktionieren, könnt ihr auf <strong><a href="https://coderdojo.com/de-DE">der zentralen Seite der Bewegung</a></strong> lesen. </p>
+							<p>Genaueres dazu, wie CoderDojos funktionieren, könnt ihr auf <strong><a href="https://coderdojo.com/de-DE">der zentralen Seite der Bewegung</a></strong> lesen.</p>
 							<p>Mittlerweile gibt es schon einige Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, jeweils eins in <strong>Letschin</strong> und in <strong>Beeskow</strong> (die leider gerade noch auf engagierte Mentor*innen warten!) und jetzt auch zusammen mit <a href="https://neuland21.de">Neuland21</a> neue Dojos in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>! Wir treffen uns normalerweise ein- bis zweimal im Monat.</p>
 						</div>
 					</div>
-					<header class="major" style="text-align:center"><h2>Aktuelles</h2></header>
+					<header class="major" style="text-align:center">
+            <h2>Aktuelles</h2>
+          </header>
 					<div class="row gtr-150">
-						<div class="col-8 col-12-small">
+						<!-- <div class="col-8 col-12-small">
 							<p>Wir starten drei neue Dojos! Jetzt, diese Woche, noch im Oktober! Rechtzeitig zu Halloween geht es los in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>!</p>
-						</div>
-						<div class="col-4 col-12-small imp-medium">
+						</div> -->
+						<!-- <div class="col-4 col-12-small imp-medium">
 							<span class="image fit"><img src="images/halloween.png" alt="" /></span>
-						</div>
+						</div> -->
 						<div class="col-8 col-12-small"> 
-							<p> Außerdem suchen wir weiterhin ehrenamtliche Mentor*innen in <strong> Beeskow </strong> und im <strong> Oderbruch </strong>, um unsere Standorte dort weiterzuführen. Bitte meldet euch, wenn ihr selber Lust habt mitzumachen oder jemanden kennt! </p> 
+							<p>Wir suchen ehrenamtliche Mentor*innen! Du hast Lust uns in unserem Vorhaben zu unterstützen? Bist technikaffin und magst das Arbeiten mit Kindern und Jugendlichen? In <strong> Beeskow </strong> und im <strong> Oderbruch </strong> suchen wir nach EhrenamtlerInnen, um unsere Standorte dort weiterzuführen und auch in unseren anderen Standorten freuen wir uns übeer Unterstützung. Bitte meldet euch, wenn ihr selber Lust habt mitzumachen oder jemanden kennt! </p>
 						</div>
 						<div class="col-4 col-12-small imp-medium">
 							<ul class="actions special">
