fixed banner Stadt

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
       <section id="four_2" class="main style2">
         <div class="container">
           <div class="col-4 col-12-small">
-              <span class="image fit"><img src="images/town.jpg" alt="" /></span>
+              <span class="image left"><img src="images/town.jpg" alt="" /></span>
               <h3>Deine Stadt?</h3>
               <p>Du hast Lust, auch bei Dir ein CoderDojo zu starten? Schreib uns, und wir überlegen gemeinsam, wie wir das hinkriegen können.</p>
-              <ul class="actions special">
+              <ul class="actions special1">
                 <li><a href="mailto:oderdojo@gmail.com" class="button primary">Schreib uns</a></li>
               </ul>
             </div>
