--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 							<p>Mittlerweile gibt es schon einige Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, jeweils eins in <strong>Letschin</strong> und in <strong>Beeskow</strong> (die leider gerade noch auf engagierte Mentor*innen warten!) und jetzt auch zusammen mit <a href="https://neuland21.de">Neuland21</a> neue Dojos in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>! Wir treffen uns normalerweise ein- bis zweimal im Monat.</p>
 						</div>
 					</div>
-					<header class="major" style="text-align:center">
+				<!-- 	<header class="major" style="text-align:center">
             <h2>Aktuelles</h2>
           </header>
-					<div class="row gtr-150">
+					<div class="row gtr-150"> -->
 						<!-- <div class="col-8 col-12-small">
 							<p>Wir starten drei neue Dojos! Jetzt, diese Woche, noch im Oktober! Rechtzeitig zu Halloween geht es los in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>!</p>
 						</div> -->
