Added Niemegk + open Link in new tab

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<h3>Bad Belzig</h3>
 							<p>An jedem zweiten Freitag im <br><a href="https://awo-potsdam.de/standort/trollberg-bad-belzig/">AWO Familienzentrum im TRollberg</a>, 15 - 17 Uhr.</p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
@@ -123,15 +123,25 @@
 							<h3>Wiesenburg</h3>
 							<p>An jedem zweiten Montag in der <a href="https://goo.gl/maps/5VcZFjH4MYwzZAuz7">Kunsthalle Wiesenburg</a>, 14 - 16 Uhr.</p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
+            <div class="col-4 col-12-small">
+<!-- Bild austauschen & Link einfügen -->
+              <span class="image fit"><a href="#"><img src="images/fouque_bib.png" alt=""/></a></span>
+              <h3>Ganz bald: Niemegk</h3>
+              <p>An jedem zweiten Dienstag im <a href="#">AWO Familienzentrum</a>, 16 - 18 Uhr.</p>
+              <ul class="actions special">
+<!-- Link einfügen -->
+                <li><a href="#" class="button" target="_blank">Coming soon...</a></li>
+              </ul>
+            </div>
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek"><img src="images/fouque_bib.png" alt="" /></a></span>
 							<h3>Brandenburg an der Havel</h3>
 							<p>An jedem zweiten Dienstag in der <a href="https://bibliothek.stadt-brandenburg.de/">Fouqué-Bibliothek Brandenburg</a>, 16 - 18 Uhr.</p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek" class="button">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
 
@@ -141,7 +151,7 @@
 							<p>An jedem vierten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
 							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
@@ -151,7 +161,7 @@
               <p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
 							<p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Letschin!</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button primary">Mitmachen</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button primary" target="_blank">Mitmachen</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
@@ -161,7 +171,7 @@
 							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
               <p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Beeskow!</strong></p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button primary">Mitmachen</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button primary" target="_blank">Mitmachen</a></li>
 							</ul>
 						</div>
 
